# gptneox20b

./: .gitignore  pyproject.toml  run.py  setup.py
src/gptneox20b/: cli.py  run.py  run_isolated.py
tests/: test_cli.py
