[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gptneox20b"
description = "test for a gpt model"
requires-python = ">=3.7"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "isolated-environment"
]
# Change this with the version number bump.
version = "1.0.1"

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.scripts]
gptneox20b = "gptneox20b.cli:main"